# zellij-logging

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
examples/: config.kdl
scripts/: test-plugin.sh
src/: ansi.rs  config.rs  lib.rs  main.rs  plugin.rs  template.rs  tracker.rs
